# chat_app

./: package-lock.json
backend/: .gitignore  README.md  pyproject.toml
backend/backend/: authbearer.py  database.py  main.py  models.py  schema.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/changepassword/: ChangePassword.jsx  changepassword.css
frontend/src/chat/: Chat.jsx  Massage.jsx
frontend/src/component/api /: Apidata.jsx  Getapi.jsx  Websocket.jsx
frontend/src/component/changepassword/: ChangePassword.jsx  changepassword.css
frontend/src/component/chat/: Chat.jsx
frontend/src/component/login/: Login.jsx  login.css
frontend/src/component/navbar/: Navbar.jsx  navbar.css
frontend/src/component/sigup/: Sigup.jsx  sigup.css
frontend/src/home/: Home.jsx
frontend/src/login/: Login.jsx  login.css
frontend/src/logout/: Logout.jsx
frontend/src/navbar/: Asidechat.jsx  Navbar.jsx  navbar.css
frontend/src/sigup/: Sigup.jsx  sigup.css
frontend/src/websocket/: Websocket.jsx  index.js
